improvement login function, fixed somelayout issues, added somelogin screens in login compount

--- a/src/app/create-note/create-note.component.scss
+++ b/src/app/create-note/create-note.component.scss
@@ -27,7 +27,7 @@
 }
 
 .res-field {
-    height: calc(100vh - 400px);
+    height: calc(100vh - 450px);
 }
 
 .bottom-bar {
