--- a/src/app/note-view/note-view.component.scss
+++ b/src/app/note-view/note-view.component.scss
@@ -18,7 +18,7 @@
 }
 
 .main-container {
-    padding-bottom: 60px;
+    padding-bottom: 4rem;
     overflow: auto;
 }
 
